tests/integration/fixtures/laugh/import/error/상위_스코프_재_import/main.laugh
가져오기 "math.laugh" 별칭 math;
{
    가져오기 "math.laugh" 별칭 math2;
}
